php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #71575 ISO C does not allow extra ‘;’ outside of a function
Submitted: 2016-02-12 12:17 UTC Modified: -
Votes:1
Avg. Score:3.0 ± 0.0
Reproduced:0 of 0 (0.0%)
From: flip101 at gmail dot com Assigned:
Status: Closed Package: Compile Warning
PHP Version: 5.6.18 OS: Ubuntu 15.10
Private report: No CVE-ID: None
 [2016-02-12 12:17 UTC] flip101 at gmail dot com
Description:
------------
when including php.h (and all it's dependencies) to compile a file

gcc -g3 -c -Wall -Werror -Wextra -pedantic -Wno-unused-parameter -Wno-implicit-function-declaration -std=c11 file.c $(php-config --includes)

/usr/local/include/php/main/php_output.h:155:42: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
 PHPAPI ZEND_EXTERN_MODULE_GLOBALS(output);

https://github.com/php/php-src/blob/PHP-5.6.18/main/php_output.h#L155

semicolon already given by macro
https://github.com/php/php-src/blob/PHP-5.6.18/Zend/zend_API.h#L150
https://github.com/php/php-src/blob/PHP-5.6.18/Zend/zend_API.h#L159


Patches

Pull Requests

Pull requests:

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2016-03-03 15:53 UTC] nikic@php.net
Automatic comment on behalf of james@asgrim.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=c4b188871e7abb7c6cc20d05ceda4cea082efcd2
Log: Fix bug #71575 removing extra semicolons outside macros
 [2016-03-03 15:53 UTC] nikic@php.net
-Status: Open +Status: Closed
 [2016-07-20 11:33 UTC] davey@php.net
Automatic comment on behalf of james@asgrim.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=c4b188871e7abb7c6cc20d05ceda4cea082efcd2
Log: Fix bug #71575 removing extra semicolons outside macros
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC