Fix bug #71575 removing extra semicolons outside macros